--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -23,6 +23,13 @@
         </div>
     </nav>
 
+    <main class="home-page">
+        <section class="hero">
+            <h1>Discover Your Perfect Destination</h1>
+            <p>Let FlyRecommend guide you to the world's most amazing places</p>
+        </section>
+    </main>
+
     <script src="travel_recommendation.js"></script>
 </body>
 </html>
