--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +7,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
     <nav class="navbar">
         <div class="logo">
@@ -48,7 +46,7 @@
                 <p>We're passionate travelers dedicated to helping you discover the world's hidden gems.</p>
                 <div class="team-grid">
                     <div class="team-member">
-                        <h3>Alex Chen</h3>
+                        <h3>Magic Johnson</h3>
                         <p>Founder & CEO</p>
                     </div>
                     <div class="team-member">
@@ -73,5 +71,4 @@
 
     <script src="travel_recommendation.js"></script>
 </body>
-
 </html>
